# dbt_enpal_assessment

./: .env.template  .gitignore  .pre-commit-config.yaml  dbt_project.yml  init.sql  packages.yml  pyproject.toml
macro/: generate_schema_name.sql
macros/: generate_schema_name.sql  sha256.sql
models/staging/crm/: source.yml  stg_crm_activity.sql  stg_crm_activity.yml  stg_crm_activity_types.sql  stg_crm_activity_types.yml  stg_crm_deal_changes.sql  stg_crm_deal_changes.yml  stg_crm_fields.sql  stg_crm_fields.yml  stg_crm_stages.sql  stg_crm_stages.yml  stg_crm_users.sql  stg_crm_users.yml
