[project]
name = "dbt_enpal_assessment"
version = "1.0.0"
description = ""
authors = []

readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbt-core~=1.9.2",
    "dbt-postgres~=1.8.1",
    "elementary-data[postgres]~=0.20.1"
]
[project.optional-dependencies]
dev = [
    "sqlfluff~=3.4.2",
    "pre-commit~=3.8.0",
    "sqlglot~=26.12.1",
]